<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Chat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center_vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/back_item"
                android:src="@drawable/back_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="@+id/back_button"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="@+id/back_button" />

            <TextView
                android:id="@+id/title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/image_profile"
                app:layout_constraintStart_toEndOf="@+id/image_profile"
                app:layout_constraintTop_toTopOf="@+id/image_profile" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/edt_chat"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_chat"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Button
        android:id="@+id/btn_chat"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_chat"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edt_chat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_chat" />
</androidx.constraintlayout.widget.ConstraintLayout>